# your-end-to-end-graphrag-implementation

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  suggested_new_classes.example.json
.github/workflows/: ci.yml
archive/visualizer/: __init__.py  test_visualizer_data.py
backend/: Dockerfile
backend/app/: main.py
backend/app/api/: browse.py  conversations.py  qa.py  trace.py
backend/app/api/middleware/: auth.py
backend/app/cli/: __main__.py  main.py
backend/app/core/: config.py
backend/app/db/: base.py  engine.py  graph_version.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/models/: __init__.py  artifacts.py  conversation.py  documents.py  entities.py  graph.py  (+3 more)
backend/app/helpers/: __init__.py  ontology_parsing.py  ontology_pruning.py
backend/app/services/: chunking.py  db_artifact_gen.py  db_artifact_rollup.py  db_conversation.py  db_corpus_wipe.py  db_document_ingest.py  db_document_lifecycle.py  db_entity_extract.py  db_insight_gen.py  db_ontology_import.py  db_ontology_wipe.py  db_recommendation_gen.py  db_size.py  db_status.py  db_temporal_enrich.py  document_io.py  embeddings.py  eval_judge.py  evaluated_summarizer.py  folder_io.py  llm_router.py  ontology_export.py  ontology_io.py  ontology_merge.py  pipeline.py  pipeline_llm.py  predicates.py  prompts.py  render_client.py  retrieval.py  retrieval_ranking.py  retrieval_sql.py  suggestions.py  table_cache.py  table_extract.py  table_extract_worker.py  table_jsonld.py  table_ontology_mining.py  versioning.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: test_merge_all_examples.py  test_merge_three_sources.py  test_pipeline_ocre_mocked.py
backend/tests/unit/: test_artifact_rollup.py  test_chunking.py  test_cli_asyncio_filter.py  test_document_io_quality.py  test_entity_probes.py  test_entity_shaped_class_filter.py  test_evaluated_summarizer.py  test_folder_io.py  test_full_hierarchy_prune.py  test_llm_router.py  test_new_relations.py  test_ontology_export.py  test_ontology_io.py  test_prompts.py  test_source_doc_downloaders.py  test_suggestions.py  test_table_cache.py  test_table_entity_link.py  test_table_extract.py  test_table_jsonld.py  test_table_vision_drop.py  test_versioning.py  test_visualizer_data.py  test_world_isolation.py
config/: config.example.yaml  models.anthropic.example.yaml  models.example.yaml  models.openai.example.yaml
eval_questions/: README.md  v1_smoke.example.txt  v1_smoke.txt
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AnswerView.tsx  AuthGate.tsx  EvidenceList.tsx  Layout.tsx  LoadingSpinner.tsx
frontend/src/pages/: AskPage.tsx  ConversationPage.tsx  ConversationsPage.tsx  SettingsPage.tsx
output_ontologies/: notes.md
source_documents/: _downloader_common.py  dailymed_download.py  financial_report_download.py  notes.md  websearch_download.py
source_ontologies/: download_ontology.py  notes.md
source_ontologies/core_ontologies/: domain_concepts.owl  geography_ontology.owl  viao_intelligence_artifact_ontology_v2.owl  viao_usage_guide_v2.txt
visualizer/: __main__.py  app.py  callbacks.py  data.py  layouts.py
(+5 files in other folders)
