[project]
name = "your-end-to-end-graphrag-implementation"
version = "0.0.1"
description = "GraphRAG-based ontology and document management system. Exposes FastAPI (REST) and MCP server in parallel so the same operations can be called by clients or by agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # API + MCP (single source of truth — fastapi-mcp auto-exposes routes as MCP tools)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.20",         # multipart file upload
    "fastapi-mcp>=0.4",
    # DB / migrations
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    # Config / settings
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # Ontology + parsing
    "owlready2>=0.46",
    "rdflib>=7.1",
    # Document readers
    "pypdf>=5.1",
    "python-pptx>=1.0",
    "python-docx>=1.1",
    "tiktoken>=0.8",
    # HTTP / resilience
    "httpx>=0.28",
    "tenacity>=9.0",
    "structlog>=24.4",
    # Background jobs
    "arq>=0.26",
    "redis>=5.2",
    # LLM providers (OpenAI for most tasks; Groq for chunk_classification only)
    "openai>=1.59",
    "groq>=0.15",
    "requests>=2.33.1",
    "beautifulsoup4>=4.12",   # source_documents/* downloaders
    "weasyprint>=60",         # HTML -> PDF rendering for SEC EDGAR fallback
    "pdfplumber>=0.11",       # Phase 2a: PDF table detection + flat extraction
    "Pillow>=10.0",           # implicit dep of pdfplumber's image rendering
    "jsonschema>=4",          # Phase 2a: validate StructuredTable JSON-LD
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.28",                       # ASGI test client
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "asgi-lifespan>=2.1",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]                        # handled by formatter

[tool.ruff.lint.per-file-ignores]
"backend/app/helpers/*" = ["N802", "N803", "N806"]   # ported helpers may use non-PEP-8 names

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "-q --strict-markers -m 'not slow'"
markers = [
    "slow: deselect by default; runs the multi-ontology deterministic merge across all sample ontologies",
]

[tool.coverage.run]
source = ["backend/app"]
branch = true
omit = [
    "backend/tests/*",
    "backend/app/db/migrations/*",   # alembic boilerplate
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = false                            # tighten gradually
warn_unused_configs = true
ignore_missing_imports = true
